fixed facebook link and mobile spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,8 +36,10 @@ img {
         padding: 50px 0px;
         letter-spacing: 3px;
 
-        section {
+        >section {
             margin-top: 40px;
+            display: flex;
+            flex-direction: column;
         }
 
         h2 {
@@ -131,7 +133,7 @@ img {
             outline: 8px solid #F7F6F6;
 
             section {
-                margin-top: 16px;
+                margin-top: 20px;
             }
 
             h2 {
@@ -151,7 +153,7 @@ img {
             }
 
             .icons {
-                margin-top: 12px;
+                margin-top: 8px;
             }
 
             img {
@@ -162,8 +164,7 @@ img {
     }
 }
 
-/* For Tablets */
-@media screen and (min-width: 577px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .appointment-btn {
         font-size: 14px;
         padding: 10px 20px;
@@ -172,16 +173,16 @@ img {
 
     .contact-us-wrapper {
         .contact-us {
-            letter-spacing: 1px;
             padding: 20px 0px;
             outline: 8px solid #F7F6F6;
+            letter-spacing: 1px;
 
             section {
-                margin-top: 8px;
+                margin-top: 12px;
             }
 
             h2 {
-                font-size: 14px;
+                font-size: 18px;
             }
 
             h3 {
@@ -204,7 +205,11 @@ img {
             }
 
             .icons {
-                margin-top: 8px;
+                margin-top: 4px;
+
+                a:first-child {
+                    margin-right: 20px;
+                }
             }
 
             img {
@@ -215,26 +220,18 @@ img {
     }
 }
 
-/* For Tablets */
+/* For larger phones */
 @media screen and (min-width: 426px) and (max-width: 576px) {
-    .appointment-btn {
-        font-size: 14px;
-        padding: 10px 20px;
-        bottom: 30px;
-    }
-
     .contact-us-wrapper {
         .contact-us {
             letter-spacing: 0px;
-            padding: 20px 0px;
-            outline: 8px solid #F7F6F6;
 
             section {
-                margin-top: 4px;
+                margin-top: 10px;
             }
 
             h2 {
-                font-size: 10px;
+                font-size: 14px;
             }
 
             h3 {
@@ -246,18 +243,8 @@ img {
                 font-size: 8px;
             }
 
-            .contact-us-footer-msg {
-                p:first-child {
-                    margin-top: 8px;
-                }
-            }
-
             p {
                 font-size: 8px;
-            }
-
-            .icons {
-                margin-top: 8px;
             }
 
             img {
@@ -279,15 +266,13 @@ img {
     .contact-us-wrapper {
         .contact-us {
             letter-spacing: 0px;
-            padding: 20px 0px;
-            outline: 8px solid #F7F6F6;
 
             section {
-                margin-top: 4px;
+                margin-top: 8px;
             }
 
             h2 {
-                font-size: 10px;
+                font-size: 12px;
             }
 
             h3 {
@@ -299,18 +284,8 @@ img {
                 font-size: 6px;
             }
 
-            .contact-us-footer-msg {
-                p:first-child {
-                    margin-top: 8px;
-                }
-            }
-
             p {
                 font-size: 6px;
-            }
-
-            .icons {
-                margin-top: 8px;
             }
 
             img {
@@ -333,14 +308,13 @@ img {
         .contact-us {
             letter-spacing: 0px;
             padding: 10px 0px;
-            outline: 8px solid #F7F6F6;
 
             section {
-                margin-top: 4px;
+                margin-top: 8px;
             }
 
             h2 {
-                font-size: 8px;
+                font-size: 10px;
             }
 
             h3 {
@@ -360,10 +334,6 @@ img {
 
             p {
                 font-size: 4px;
-            }
-
-            .icons {
-                margin-top: 4px;
             }
 
             img {
